--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "ui": "browser-sync start --config bs-config.js",
     "dev": "concurrently \"yarn server:dev\" \"yarn ui\" \"yarn client:dev\""
   },
+  "staticFiles": {
+    "staticPath": "assets",
+    "staticOutPath": "assets"
+  },
   "devDependencies": {
     "@parcel/transformer-sass": "2.10.3",
     "browser-sync": "^2.29.3",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
     "parcel": "^2.10.3",
-    "parcel-plugin-static-files-copy": "^2.6.0"
+    "parcel-reporter-static-files-copy": "^1.5.3"
   },
   "dependencies": {
     "express": "^4.18.2",
